[package]
name = "cubetonic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
bytemuck = { version = "1.23.1", features = ["derive"] }
env_logger = "0.11.8"
glam = { version = "0.30.5", features = ["bytemuck"] }
hex = "0.4.3"
luanti-core = { git = "https://github.com/kawogi/luanti-rs.git", version = "0.2.0" }
luanti-protocol = { git = "https://github.com/kawogi/luanti-rs.git", version = "0.2.0" }
rand = "0.9.2"
rayon = "1.10.0"
tokio = "1.47.1"
wgpu = "26.0.1"
winit = "0.30.11"

[profile.profiling]
inherits = "release"
debug = true
